[GStreamer][MSE] Fix player private selection when MSE is enabled https://bugs.webkit.org/show_bug.cgi?id=164116

Reviewed by Philippe Normand.

Covered by existing tests.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::load):
* platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::load):


Canonical link: https://commits.webkit.org/183442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209796 268f45cc-cd09-0410-ab3c-d52691b4dbfc